overflow fix

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -356,12 +356,13 @@ body
         header,section
           margin-left: 55px
         p
-          font-size: 14px
-          line-height: 18px
+          font-size: 12px
+          line-height: 14px
       .specs
         ul
           li
-            font-size: 14px
+            font-size: 12px
+            line-height: 14px
 
 @media only screen and (max-width : 1100px)
   #navigation
